Fixed margin of title picture for no navbar overlap

--- a/ee106a/styles.css
+++ b/ee106a/styles.css
@@ -8,7 +8,6 @@ body {
     font-family: Arial;
     font-size: 14px;
     height: 100%;
-    padding-top: 60px;
 }
 
 .container-fluid {
